# apple-search-ads-cli

./: .gitignore  FORK_NOTES.md  LICENSE  README.md  pyproject.toml
asa_cli/: __init__.py  api.py  config.py  main.py
asa_cli/commands/: adgroups.py  campaigns.py  config.py  keywords.py  optimize.py  reports.py
tests/: __init__.py  test_api.py  test_config.py
