[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asa-cli"
version = "1.0.0"
description = "Apple Search Ads CLI - manage campaigns, keywords, and reporting using Apple's recommended 4-campaign structure"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Cameron Ehrlich", email = "cameron@ehrlich.io"}
]
keywords = ["apple", "search-ads", "asa", "cli", "marketing", "app-store", "ios"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyjwt[crypto]>=2.8.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
asa = "asa_cli.main:app"

[project.urls]
"Homepage" = "https://github.com/cameronehrlich/apple-search-ads-cli"
"Documentation" = "https://github.com/cameronehrlich/apple-search-ads-cli#readme"
"Issues" = "https://github.com/cameronehrlich/apple-search-ads-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["asa_cli*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
